# auto-qc

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: feature_test.yml  superlinter.yml  tests.yml  unit_test.yml
auto_qc/: MANUAL.md  exception.py  main.py  node.py  object.py  objects.py  printers.py  types.py  variable.py  version.py
auto_qc/evaluate/: error.py  exception.py  qc.py
auto_qc/util/: file_system.py  functional.py  workflow.py
examples/multiple_thresholds/: data.json  thresholds.json
examples/simple/: thresholds.json
features/: environment.py  errors.feature  manual.feature  outputs.feature  testing.feature
features/steps/: assertions.py  functions.py  outputs.py  steps.py
man/: auto-qc.1.mkd
test/: helper.py  test_error_handling.py  test_evaluate.py  test_node.py  test_object.py  test_variable.py
