[tool.poetry]
name = "auto-qc"
version = "3.0.0"
description = 'Run high-throughput automated quality control using configuration files.'
authors = ["Michael Barton <mail@michaelbarton.me.uk>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/JGI-Bioinformatics/auto-qc"
include = ["assets/*"]
exclude = ["test", "feature"]

[tool.poetry.scripts]
auto-qc = "auto_qc:cli"

[tool.poetry.dependencies]
python = "^3.6"
python-termstyle = "^0.1.10"
PyYAML = "^5.3.1"
funcy = "^1.15"
fn = "^0.4.3"
pytest = "^6.2.1"
dataclasses = { version = "^0.8", python = ">=3.6,<3.7" }


[tool.poetry.dev-dependencies]
rednose = "^1.3.0"
scripttest = "^1.3"
behave = "^1.2"
black = "^20.8b1"
nose = "1.3"
rich = "^9.6.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
