[tool.poetry]
name = "auto-qc"
version = "3.0.0"
description = 'Run high-throughput automated quality control using configuration files.'
authors = ["Michael Barton <mail@michaelbarton.me.uk>"]
license = "BSD-3-Clause"
readme = "auto_qc/MANUAL.md"
repository = "https://github.com/JGI-Bioinformatics/auto-qc"
include = ["auto_qc/MANUAL.md", "README.md"]
exclude = ["test", "feature"]

[tool.poetry.scripts]
auto-qc = "auto_qc.main:cli"

[tool.poetry.dependencies]
PyYAML = "^5.3.1"
click = "^7.1.2"
fn = "^0.4.3"
funcy = "^1.15"
pytest = "^6.2.1"
python = ">=3.7"
python-termstyle = "^0.1.10"
rich = "^9.6.1"


[tool.poetry.dev-dependencies]
rednose = "^1.3.0"
scripttest = "^1.3"
behave = "^1.2"
black = "^20.8b1"
nose = "1.3"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 100
